feat: add GraalVM native image support and replace Kafka Streams with plain listener
The Kafka Streams topology was replaced with a simple `@KafkaListener`
because
the RocksDB/JNI classes it pulls in are not GraalVM native-friendly.
This
workload is stateless, so a plain listener is sufficient and avoids the
native
compatibility issues.